--- a/annual-report-2024.html
+++ b/annual-report-2024.html
@@ -1409,6 +1409,7 @@
                             <a href="board-of-directors.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-user-tie ml-2 text-[#6e1948]"></i>قرار التأسيس</a>
                             <a href="organizational-structure.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-sitemap ml-2 text-[#6e1948]"></i>الهيكل التنظيمي</a>
                             <a href="work-team.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-user-friends ml-2 text-[#6e1948]"></i>اعضاء مجلس الإدارة</a>
+                            <a href="disclaimer.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-exclamation-circle ml-2 text-[#6e1948]"></i>إخلاء المسؤولية</a>
                             <a href="message.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-comment-dots ml-2 text-[#6e1948]"></i>رسالتنا</a>
                             <a href="vision.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-eye ml-2 text-[#6e1948]"></i>رؤيتنا</a>
                             <a href="strategicMap.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-map ml-2 text-[#6e1948]"></i>الخارطة الإستراتيجية</a>
@@ -1502,6 +1503,7 @@
                         <a href="board-of-directors.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-user-tie ml-2 text-[#6e1948]"></i>قرار التأسيس</a>
                         <a href="organizational-structure.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-sitemap ml-2 text-[#6e1948]"></i>الهيكل التنظيمي</a>
                         <a href="work-team.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-user-friends ml-2 text-[#6e1948]"></i>اعضاء مجلس الإدارة</a>
+                        <a href="disclaimer.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-exclamation-circle ml-2 text-[#6e1948]"></i>إخلاء المسؤولية</a>
                         <a href="message.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-comment-dots ml-2 text-[#6e1948]"></i>رسالتنا</a>
                         <a href="vision.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-eye ml-2 text-[#6e1948]"></i>رؤيتنا</a>
                         <a href="strategicMap.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-map ml-2 text-[#6e1948]"></i>الخارطة الإستراتيجية</a>
