--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>جمعية تبيان لخدمة ضيوف الرحمن - ملفات الحوكمة</title>
+    <title>جمعية تبيان لخدمة ضيوف الرحمن - التقرير السنوي لعام 2024</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="theme.css">
         <style>
         :root {
             --color-primary: #0f5a4a;   /* logo deep green */
@@ -1350,10 +1350,11 @@
         /* Make the mobile menu scrollable on phones (iOS-friendly) */
         @media (max-width: 1024px) {
             #mobile-menu {
+                /* baseline: allow inner scrolling even if JS doesn't run */
                 max-height: calc(100vh - 72px);
                 overflow-y: auto;
-                -webkit-overflow-scrolling: touch;
-                overscroll-behavior: contain;
+                -webkit-overflow-scrolling: touch; /* momentum scroll on iOS */
+                overscroll-behavior: contain;      /* prevent body scroll chaining */
             }
         }
     </style>
@@ -1408,7 +1409,6 @@
                             <a href="board-of-directors.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-user-tie ml-2 text-[#6e1948]"></i>قرار التأسيس</a>
                             <a href="organizational-structure.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-sitemap ml-2 text-[#6e1948]"></i>الهيكل التنظيمي</a>
                             <a href="work-team.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-user-friends ml-2 text-[#6e1948]"></i>اعضاء مجلس الإدارة</a>
-                            <a href="disclaimer.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-exclamation-circle ml-2 text-[#6e1948]"></i>إخلاء المسؤولية</a>
                             <a href="message.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-comment-dots ml-2 text-[#6e1948]"></i>رسالتنا</a>
                             <a href="vision.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-eye ml-2 text-[#6e1948]"></i>رؤيتنا</a>
                             <a href="strategicMap.html" class="block px-4 py-2 text-gray-700 hover:bg-[#6e1948]/10"><i class="fas fa-map ml-2 text-[#6e1948]"></i>الخارطة الإستراتيجية</a>
@@ -1502,7 +1502,6 @@
                         <a href="board-of-directors.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-user-tie ml-2 text-[#6e1948]"></i>قرار التأسيس</a>
                         <a href="organizational-structure.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-sitemap ml-2 text-[#6e1948]"></i>الهيكل التنظيمي</a>
                         <a href="work-team.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-user-friends ml-2 text-[#6e1948]"></i>اعضاء مجلس الإدارة</a>
-                        <a href="disclaimer.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-exclamation-circle ml-2 text-[#6e1948]"></i>إخلاء المسؤولية</a>
                         <a href="message.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-comment-dots ml-2 text-[#6e1948]"></i>رسالتنا</a>
                         <a href="vision.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-eye ml-2 text-[#6e1948]"></i>رؤيتنا</a>
                         <a href="strategicMap.html" class="block py-3 text-gray-700 hover:bg-[#6e1948]/10 rounded-lg"><i class="fas fa-map ml-2 text-[#6e1948]"></i>الخارطة الإستراتيجية</a>
@@ -1561,15 +1560,54 @@
         box-sizing: border-box;
     }
 </style>
-<!--Main section goes here-->
-<div class="min-h-screen flex items-center justify-center bg-gray-50 py-16 px-4">
-    <div class="bg-white rounded-lg shadow-lg p-8 max-w-3xl w-full text-center">
-        <h1 class="text-4xl font-bold text-primary mb-4">ملفات الحوكمة</h1>
-        <p class="text-gray-700 mb-6">يمكنك رؤية وتحميل ملفات الحوكمة الخاصة بجمعية تبيان لخدمة ضيوف الرحمن من خلال الصفحات أدناه:</p>
-        <div id="hawkamah-list" class="space-y-4">
+
+<main class="min-h-screen bg-white overflow-x-hidden">
+    <!-- Financial Statements (الإفصاحات) Section -->
+    <section class="py-16 bg-gray-50/60">
+        <div class="max-w-5xl mx-auto px-4">
+            <div class="section-header-container">
+                <h1 class="text-3xl md:text-4xl font-extrabold text-primary curved-underline gold">إفصاح تبيان</h1>
+                <p class="section-subtitle text-gray-600 max-w-3xl mx-auto">اطلع على الإفصاحات المعتمدة لجمعية تبيان لخدمة ضيوف الرحمن.</p>
+            </div>
+
+            <!-- Card -->
+            <div class="bg-white rounded-2xl shadow-lg border border-gray-200 p-6 md:p-8">
+                <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-6">
+                    <div class="flex items-start gap-4">
+                        <div class="w-12 h-12 rounded-xl bg-primary/10 text-primary flex items-center justify-center">
+                            <i class="fa-solid fa-file-invoice-dollar text-2xl"></i>
+                        </div>
+                        <div class="text-right">
+                            <h2 class="text-xl md:text-2xl font-bold text-primary">إفصاح تبيان</h2>
+                            <p class="text-gray-600 mt-1">عرض أو تنزيل النسخة الرسمية PDF.</p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-wrap items-center gap-3">
+                        <a class="btn-accent px-5 py-3 rounded-xl font-semibold hover:brightness-95 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
+                           href="assets/افصاح تبيان.pdf" target="_blank" rel="noopener" aria-label="عرض إفصاح تبيان في نافذة جديدة">
+                            <i class="fa-solid fa-eye ml-2"></i> عرض
+                        </a>
+                        <a class="bg-primary text-white px-5 py-3 rounded-xl font-semibold hover:bg-primary/90 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent"
+                           href="assets/افصاح تبيان.pdf" download aria-label="تنزيل إفصاح تبيان PDF">
+                            <i class="fa-solid fa-arrow-down ml-2"></i> تنزيل PDF
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Helpful notes -->
+                <div class="mt-6 text-sm text-gray-600 space-y-2">
+                    <p>الملف بصيغة PDF ويمكن فتحه مباشرة في المتصفح أو تنزيله للاحتفاظ به.</p>
+                    <p>في حال واجهت مشكلة في العرض أو التنزيل، راسلنا على
+                        <a href="mailto:tabyan1445@gmail.com" class="text-primary hover:text-accent font-medium">tabyan1445@gmail.com</a>.
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </section>
+</main>
+
+
 
     <!-- Footer -->
     <footer class="bg-primary text-white">
@@ -2194,100 +2232,6 @@
             detail: { message: 'الموقع جاهز للاستخدام' }
         });
         document.dispatchEvent(siteReadyEvent);
-
-        // ========== HAWKAMAH PDF LIST RENDERING ==========
-        const hawkamahContainer = document.getElementById('hawkamah-list');
-        if (hawkamahContainer) {
-            // القائمة الكاملة لملفات الحوكمة (من مجلد assets/Hawkamah/Hawkamah)
-            const hawkamahFiles = [
-                'التدابير الداخلية المتبعة لمكافحة غسيل الأموال وتمويل الإرهاب.pdf',
-                'الدليل التعريفي لمجلس الإدارة.pdf',
-                'الدليل التنظيمي لمكافحة غسيل الأموال وتمويل الإرهاب.pdf',
-                'المؤشرات الدالة على وجود شبهة غسيل أموال أو تمويل إرهاب.pdf',
-                'آلية تدقيق لاختبار فاعلية وكفاية السياسات والإجراءات والضوابط لمكافحة تمويل الإرهاب.pdf',
-                'آلية قبول أعضاء الجمعية العمومية.pdf',
-                'إجراءات التعامل مع المقبوضات في الجمعية.pdf',
-                'إجراءات إدارة المخاطر المتعلقة بغسل الأموال وتمويل الإرهاب.pdf',
-                'دليل السياسات والإجراءات المالية والمحاسبية.pdf',
-                'سياسات الصرف للبرامج والأنشطة والمصروفات الإدارية والعمومية لجمعية تبيان لخدمة ضيوف الرحمن.pdf',
-                'سياسة الاحتفاظ بالوثائق وإتلافها.pdf',
-                'سياسة الاستبدال والارجاع الخاصة بالتبرعات.pdf',
-                'سياسة الاستثمار لجمعية تبيان لخدمة ضيوف الرحمن.pdf',
-                'سياسة الاشتباه بعمليات غسل الأموال.pdf',
-                'سياسة الإبلاغ عن المخالفات وحماية مقدمي البلاغات.pdf',
-                'سياسة التعامل مع الشركاء المنفذين والأطراف الثلاثة.pdf',
-                'سياسة الميثاق الأخلاقي.pdf',
-                'سياسة الوقاية من عمليات غسل الأموال وجرائم تمويل الإرهاب.pdf',
-                'سياسة إدارة المتطوعين.pdf',
-                'سياسة إدارة المخاطر.pdf',
-                'سياسة تعارض المصالح.pdf',
-                'سياسة تنظيم العلاقة مع المستفيدين.pdf',
-                'سياسة توجيه مبلغ التبرع الى مشروع آخر.pdf',
-                'سياسة جمع التبرعات.pdf',
-                'سياسة خصوصية البيانات.pdf',
-                'سياسة مصفوفة الصلاحيات بين مجلس الإدارة والإدارة التنفيذية.pdf',
-                'لائحة المشتريات والتعاقدات.pdf',
-                'لائحة أدوار ومسؤوليات مجلس الإدارة تجاه مكافحة غسل الأموال وتمويل الإرهاب.pdf',
-                'لائحة تتبع النقد من المتبرع الى المستفيد.pdf',
-                'لائحة تعيين المدير التنفيذي.pdf',
-                'لائحة شراء الأصول.pdf',
-                'لائحة وإجراءات اختيار المستفيدين.pdf',
-                'مهام وصلاحيات مجلس الإدارة.pdf',
-                'نظام الرقابة الداخلية اداري.pdf',
-                'نظام الرقابة الداخلية مالي.pdf',
-                'نموذج إجراءات فحص لضمان معايير عالية عند التوظيف.pdf'
-            ];
-
-            const basePath = 'assets/Hawkamah/Hawkamah/';
-
-            hawkamahFiles.forEach((file) => {
-                const title = file.replace(/\.pdf$/i, '');
-                const url = basePath + encodeURIComponent(file);
-
-                // عنصر البطاقة لكل ملف
-                const card = document.createElement('div');
-                card.className = 'bg-white border border-gray-200 rounded-xl p-4 sm:p-5 shadow-sm hover:shadow-md transition-shadow';
-
-                // العنوان
-                const h3 = document.createElement('h3');
-                h3.className = 'text-right text-lg sm:text-xl font-semibold text-gray-800 mb-3';
-                h3.textContent = title;
-                card.appendChild(h3);
-
-                // صف الإجراءات: زر عرض الملف + أيقونة PDF
-                const actions = document.createElement('div');
-                actions.className = 'flex items-center justify-between flex-row-reverse gap-3';
-
-                const leftGroup = document.createElement('div');
-                leftGroup.className = 'flex items-center gap-3';
-
-                const icon = document.createElement('i');
-                icon.className = 'fas fa-file-pdf text-accent text-2xl';
-
-                const link = document.createElement('a');
-                link.href = url;
-                link.target = '_blank';
-                link.rel = 'noopener';
-                link.className = 'inline-flex items-center gap-2 bg-primary text-white px-4 py-2 rounded-lg hover:bg-primary/90 transition-colors';
-                link.innerHTML = '<span>عرض الملف</span><i class="fas fa-arrow-up-right-from-square text-sm opacity-90"></i>';
-
-                leftGroup.appendChild(icon);
-                leftGroup.appendChild(link);
-
-                // مسار الملف (اختياري للنسخ)
-                const pathSpan = document.createElement('span');
-                pathSpan.className = 'text-sm text-muted truncate max-w-[60%] text-left';
-                pathSpan.setAttribute('dir', 'ltr');
-                pathSpan.title = file;
-                pathSpan.textContent = file;
-
-                actions.appendChild(leftGroup);
-                actions.appendChild(pathSpan);
-                card.appendChild(actions);
-
-                hawkamahContainer.appendChild(card);
-            });
-        }
     });
     
     // ========== UTILITY FUNCTIONS ==========
@@ -2318,10 +2262,10 @@
                 animation-duration: 0.01ms !important;
                 animation-iteration-count: 1 !important;
                 transition-duration: 0.01ms !important;
-                }
-                `;
-                document.head.appendChild(style);
-            }; 
-            </script>
+            }
+        `;
+        document.head.appendChild(style);
+    }; 
+        </script>
     </body>
     </html>
